--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "concurrently": "^6.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
