--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
     "concurrently": "^6.3.0",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
@@ -21,16 +22,24 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "set-value": "^4.1.0",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test",
+    "coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "server": "json-server --watch ./mockServer/db.json --port 5000",
     "dev": "concurrently \"npm run server\" \"npm start\""
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "<rootDir>/src/components/**/*.{ts,tsx}"
+    ]
   },
   "eslintConfig": {
     "extends": [
